[package]
name = "bevy-vertex-pulling"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/superdump/bevy-vertex-pulling"

[features]
bevy_ci_testing = ["bevy/bevy_ci_testing"]
trace_tracy = ["bevy/trace_tracy"]

[dependencies]
bevy = { version = "0.8.0-dev", git = "https://github.com/bevyengine/bevy", branch = "main" }

[dev-dependencies]
bytemuck = "1.9.1"
rand = "0.8.5"
