[package]
name = "bevy-vertex-pulling"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/superdump/bevy-vertex-pulling"

[features]
bevy_ci_testing = ["bevy/bevy_ci_testing"]
trace_tracy = ["bevy/trace_tracy"]

[dependencies]
bevy = "0.9"
bitflags = "1.3.2"

[dev-dependencies]
bytemuck = "1.9.1"
examples_utils = { path = "examples_utils", version = "0.8.0-dev" }
rand = "0.8.5"
